--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
 <app-header-nav></app-header-nav>
 <div>
+	<!--  -->
 	<h1>Route: {{ reallyGlobalState().currentRoute }}</h1>
 	<p>
 		App Component Counter: {{ reallyGlobalState().counter }}
 		<button (click)="incrementCounter()">Increment Counter</button>
 	</p>
 </div>
-
+<!-- ROUTE RENDERING -->
 <router-outlet />
