added satisfying functionality for toast

--- a/src/app/examples/event-bus/toast/toast.component.html
+++ b/src/app/examples/event-bus/toast/toast.component.html
@@ -3,7 +3,7 @@
 	<div
 		class="toast-item"
 		[class]="toast.type"
-		@toastAnimation
+		[attr.data-id]="toast.id"
 		(click)="removeToast(toast.id)"
 	>
 		{{ toast.message }}
